# plaud-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
skill/use-plaud/: SKILL.md
src/: cli.rs  commands.rs  config.rs  main.rs  mcp.rs  model.rs  oauth.rs  output.rs  store.rs
